back to Aug 24, 2017

--- a/index.html
+++ b/index.html
@@ -1,159 +1,62 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
+<html>
 <head>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+	<title>RinersRoutes</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.1.0/dist/leaflet.css" integrity="sha512-wcw6ts8Anuw10Mzh9Ytw4pylW8+NAD4ch3lqm9lzAsTxg0GFeJgoAtxuCLREZSC5lUXdVyo/7yfsqFjQ4S+aKw==" crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.1.0/dist/leaflet.js" integrity="sha512-mNqn2Wg7tSToJhvHcqfzLMU6J4mkOImSPTxVZAdo+lcPlk+GhZmYgACEe0x35K7YzW1zJ7XyJV/TT1MrdXvMcA==" crossorigin=""></script>
+	<link rel="stylesheet" type="text/css" href="css/style.css"/>
+	<script src="js/bikeRoutes.js"></script>
+	<script src="js/app.js"></script>
 </head>
 <body>
-<form>
-    <label><input type="radio" name="dataset" id="dataset" value="total" checked> 50 Emails</label>
-    <label><input type="radio" name="dataset" id="dataset" value="option1"> Fake Emails</label>
-    <label><input type="radio" name="dataset" id="dataset" value="option2"> Fake Emails</label>
-</form>
-
-<script src="http://d3js.org/d3.v3.min.js"></script>
-
-d3.select("input[value=\"total\"]").property("checked", true);
-
-datasetTotal = [
-    {label:"Cohort 1", value:10},
-    {label:"Cohort 2", value:20},
-    {label:"Cohort 3", value:26},
-    {label:"Cohort 4", value:22},
-    {label:"Cohort 5", value:19},
-    {label:"Cohort 6", value:1},
-    {label:"Cohort 7", value:0},
-    {label:"Cohort 8", value:1},
-    {label:"Cohort 9", value:0},
-    {label:"Cohort 10", value:1}
-];
-
-datasetOption1 = [
-    {label:"Cohort 1", value:22},
-    {label:"Cohort 2", value:33},
-    {label:"Cohort 3", value:4},
-    {label:"Cohort 4", value:15},
-    {label:"Cohort 5", value:36},
-    {label:"Cohort 6", value:0},
-    {label:"Cohort 7", value:7},
-    {label:"Cohort 8", value:17},
-    {label:"Cohort 9", value:20},
-    {label:"Cohort 10", value:7}
-];
-
-datasetOption2 = [
-    {label:"Cohort 1", value:10},
-    {label:"Cohort 2", value:20},
-    {label:"Cohort 3", value:30},
-    {label:"Cohort 4", value:5},
-    {label:"Cohort 5", value:12},
-    {label:"Cohort 6", value:20},
-    {label:"Cohort 7", value:2},
-    {label:"Cohort 8", value:20},
-    {label:"Cohort 9", value:6},
-    {label:"Cohort 10", value:50}
-];
-
-d3.selectAll("input").on("change", selectDataset);
-
-function selectDataset() {
-    var value = this.value;
-    if (value == "total") {
-        change(datasetTotal);
-    }
-    else if (value == "option1"){
-        change(datasetOption1);
-    }
-    else if (value == "option2") {
-        change(datasetOption2);
-    }
-}
-
-var margin = {top: (parseInt(d3.select('body').style('height'), 10)/10), right: (parseInt(d3.select('body').style('width'), 10)/20), bottom: (parseInt(d3.select('body').style('height'), 10)/10), left: (parseInt(d3.select('body').style('width'), 10)/20)},
-width = parseInt(d3.select('body').style('width'), 10) - margin.left - margin.right,
-height = parseInt(d3.select('body').style('height'), 10) - margin.top - margin.bottom;
-
-var div = d3.select("body").append("div").attr("class", "toolTip");
-var formatPercent = d3.format("");
-
-var x = d3.scale.ordinal()
-    .rangeRoundBands([0, width], .2, .5);
-
-var y = d3.scale.linear()
-    .range([height, 0]);
-
-var xAxis = d3.svg.axis()
-    .scale(x)
-    .orient("bottom");
-
-var yAxis = d3.svg.axis()
-    .scale(y)
-    .orient("left")
-    .tickFormat(formatPercent);
-
-var svg = d3.select("body").append("svg")
-    .attr("width", width + margin.left + margin.right)
-    .attr("height", height + margin.top + margin.bottom)
-    .append("g")
-    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-
-    svg.append("g")
-            .attr("class", "x axis")
-            .attr("transform", "translate(0," + height + ")")
-            .call(xAxis);
-
-    change(datasetTotal);
-
-function change(dataset) {
-
-    x.domain(dataset.map(function(d) { return d.label; }));
-    y.domain([0, d3.max(dataset, function(d) { return d.value; })]);
-
-    svg.append("g")
-        .attr("class", "x axis")
-        .attr("transform", "translate(0," + height + ")")
-        .call(xAxis);
-
-    svg.select(".y.axis").remove();
-    svg.select(".x.axis").remove();
-
-    svg.append("g")
-        .attr("class", "y axis")
-        .call(yAxis)
-        .append("text")
-        .attr("transform", "rotate(-90)")
-        .attr("y", 6)
-                .attr("dy", ".71em")
-                .style("text-anchor", "end")
-                .text("Contacts #");
-
-var bar = svg.selectAll(".bar")
-    .data(dataset, function(d) { return d.label; });
-    // new data:
-    bar.enter().append("rect")
-        .attr("class", "bar")
-        .attr("x", function(d) { return x(d.label); })
-        .attr("y", function(d) { return y(d.value); })
-        .attr("height", function(d) { return height - y(d.value); })
-        .attr("width", x.rangeBand());
-
-    bar.on("mousemove", function(d){
-        div.style("left", d3.event.pageX+10+"px");
-        div.style("top", d3.event.pageY-25+"px");
-        div.style("display", "inline-block");
-        div.html((d.label)+"<br>"+(d.value)+"%");
-    });
-    bar.on("mouseout", function(d){
-        div.style("display", "none");
-    });
-
-    // removed data:
-    bar.exit().remove();
-    // updated data:
-    bar.transition()
-        .duration(1500)
-        .attr("y", function(d) { return y(d.value); })
-        .attr("height", function(d) { return height - y(d.value);
-    });
-};
-
+<div id="mapid"></div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script>
+	// Create my lil map element
+	var mymap = L.map('mapid').setView([47.6097,-122.3331], 13);
+	var mymap = L.map('mapid').setView([47.6097,-122.3331], 10);
+	// Add OpenStreetMap tile layer to lil map element
+	L.tileLayer('http://server.arcgisonline.com/ArcGIS/rest/services/World_Topo_Map/MapServer/tile/{z}/{y}/{x}', {
+	attribution: 'Tiles &copy; Esri &mdash; Esri, DeLorme, NAVTEQ, TomTom, Intermap, iPC, USGS, FAO, NPS, NRCAN, GeoBase, Kadaster NL, Ordnance Survey, Esri Japan, METI, Esri China (Hong Kong), and the GIS User Community'
+	,	accessToken: 'pk.eyJ1IjoicmluZXkiLCJhIjoiY2o1MXA0MGNiMDRmdjJ3bXJud3p5NGx5MCJ9.-eM2BNP0V79dJzOzWyXXCA'	
+		}).addTo(mymap);
+		
+	// Alki, Three Tree Point, Normandy Park, Lake Washington
+	// 51 MI.   2,691 FT.
+	var AlikiBikeRoute = L.polyline(AlikiBikeRoute,
+	{color: 'purple', weight: 4}).addTo(mymap);
+	AlikiBikeRoute.bindPopup("<h3>Alki, Three Tree Point, Normandy Park, Lake Washington Loop<h3> <p>51 MI.   2,691 FT.<p>");	
+	
+	// Lake Forest Park, Edmonds, Richmond Beach, COGS, Heaven & Hills
+	//  32 MI.   2,440 FT.
+	var	ForestPark = L.polyline(ForestPark,
+	{color: 'purple', weight: 4}).addTo(mymap);
+	ForestPark.bindPopup("<h3>Lake Forest Park, Edmonds, Richmond Beach, COGS, Heaven & Hills Loop <h3> <p>32 MI.   2,440 FT.<p>");
+	L.marker([47.550505, -122.252598])
+        .addTo(mymap)
+	 	.bindPopup("<b>Seward Park</b>");
+    L.marker([47.696382, -122.272210])
+        .addTo(mymap)
+	 	.bindPopup("<b>Matthew's Beach</b>");
+	
+	// Create an Empty Popup
+	var popup = L.popup();
+	
+	// Listen for a click event on the Map element
+	mymap.on('click', onMapClick);
+	
+	// load GeoJSON from an external file
+	// $.getJSON("neighborhoods.geojson",function(data){
+	// 	// add GeoJSON layer to the map once the file is loaded
+	// 	L.geoJson(data,{
+	// 	    onEachFeature: function (feature, layer) {
+	// 	        layer.addTo(feature.properties.name);
+	// 	    }
+	// 	}).addTo(mymap);
+	// });
+</script>
 </body>
+</html>
